--- a/ForMiss/css/style.css
+++ b/ForMiss/css/style.css
@@ -1,6 +1,6 @@
-﻿/*通用样式*/
+/*通用样式*/
 *{margin:0;padding:0;}
-body{font-size: 14px;background:#991B05;font-weight: 600;}
+body{font-size: 14px;background:url("../img/1_1.jpg") #6f0b02;font-weight: 600;}
 img{border:0;}
 
 .box{width:310px;margin:auto;perspective:800px;/*景深*/}
@@ -28,11 +28,11 @@ img{border:0;}
 
 .music{margin: 0 39%;width: 22%;opacity: 0;position: absolute;background-color: ;}
 .pig{width: 1000px;height: auto;position: relative;bottom: 0;margin: 0 auto;z-index: 999;display: none;}
-.pig div{width: 100px;height: auto;float: left;position: relative;}
+.pig>div{width: 100px;height: auto;float: left;position: relative;}
 .pig div img{width: inherit;height: inherit;opacity: ;cursor: pointer;transition: all linear 0.1s;}
 .pig div img:hover{ animation: myfirst linear 1s infinite alternate;}
 @keyframes myfirst{from {transform: rotate(0deg);}50%{ transform: rotate(20deg);}100% {transform: rotate(-20deg);}}
-.bless{position: absolute;left:-50px;background-color: white;top:-120px;padding: 8px 0;border-radius: 5px;width: auto;font-size: 12px;text-align: center;display: none;}
+.bless{position: absolute;left:-30px;background-color: white;top:-20px;padding: 6px 10px;border-radius: 5px;width: auto;font-size: 12px;text-align: center;display: none;}
 .bless:before{position: absolute;width: 0;height: 0;content: "";border-bottom: 8px solid transparent;border-left: 8px solid transparent;border-right: 8px solid transparent;border-top: 8px solid white;bottom: -13px;right: 0;}
 .pig>div:hover .bless{display: block;}
 
